tests/ui/type-alias-impl-trait/wf-nested.pass_sound.stderr
error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-nested.rs:46:38
   |
LL |     fn define<T>() -> OuterOpaque<T> {}
   |                                      ^^
   |                                      |
   |                                      the parameter type `T` must be valid for the static lifetime...
   |                                      ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL |     fn define<T: 'static>() -> OuterOpaque<T> {}
   |                +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-nested.rs:51:17
   |
LL |         let _ = outer.get();
   |                 ^^^^^^^^^^^
   |                 |
   |                 the parameter type `T` must be valid for the static lifetime...
   |                 ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound
   |
LL |     fn test<T: 'static>() {
   |              +++++++++

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/wf-nested.rs:51:17
   |
LL |         let _ = outer.get();
   |                 ^^^^^^^^^^^
   |                 |
   |                 the parameter type `T` must be valid for the static lifetime...
   |                 ...so that the type `T` will meet its required lifetime bounds
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider adding an explicit lifetime bound
   |
LL |     fn test<T: 'static>() {
   |              +++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0310`.
